[package]
name = "steamrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
discord-rich-presence = "0.2.5"
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "time"] }
tokio-stream = "0.1.16"
